# oRoNOiDE

./: .gitignore  CMakeLists.txt  Cargo.toml
docs/: architecture.md  decisions.md  loadmap.md
engine/core/: app.cpp  app.h  camera.cpp  camera.h  log.h
engine/docs/design/: 00_rule_before_designing.md  01_foundation_design.md  02_material_field_design.md  03_shape_representation_design.md  04_ecs_id_version_design.md  05_surface_rendering_design.md  06_generation_pipeline_design.md
engine/docs/discussion/: 01_foundation_discussion.md  02_material_field_discussion.md
engine/docs/outputs/: arenite_sandstone_technology_report.md  avoyd_vulkan_10x_analysis.md  deep-research-report (1).md  deep-research-report.md  hyperreal_stone_technology_report.md  material_field_design_evaluation.md  material_field_discussion_summary.md  material_field_roi_recommendation.md  stone_labeling.md  stone_rendering_method.md  stone_rendering_method_codex_review.md  stone_rendering_method_opus_review.md  stone_report_gap_analysis.md  stone_structural_realism_report.md
engine/material/: material.h  registry.cpp  registry.h
engine/render/: debug_view.h  renderer.cpp  renderer.h
engine/render/shaders/: shadow_depth.vert  voxel_mesh.frag  voxel_mesh.vert
engine/rhi/vulkan/: context.cpp  context.h  swapchain.cpp  swapchain.h
engine/voxel/: async_publication.cpp  async_publication.h  ci_lanes.cpp  ci_lanes.h  ci_protocol.cpp  ci_protocol.h  dual_contouring.cpp  dual_contouring.h  edit_classifier.cpp  edit_classifier.h  edit_types.h  hard_edit_gate.cpp  hard_edit_gate.h  quality_gates.cpp  quality_gates.h  rollback_state_store.cpp  rollback_state_store.h  runtime.cpp  runtime.h  side_effect_fences.cpp  side_effect_fences.h  snapshot_registry.cpp  snapshot_registry.h  state_version.h  transaction.cpp  transaction.h  voxel_world.cpp  voxel_world.h  worker_runtime.cpp  worker_runtime.h
samples/stone_rendering/: main.cpp
src/: main.rs  simulation.rs
tests/voxel/: runtime_phase_v4_tests.cpp
